# KSY 자주묻는 질문과답

--- a/app/views/oftenqna/index.jade
+++ b/app/views/oftenqna/index.jade
@@ -16,11 +16,11 @@ block content
                 .page-title-box
                   ol.breadcrumb.pull-right
                     li
-                      a(href='#') Home
+                      a(href='/oftenqna/') Home
                     li
-                      a(href='#') SD 기본정보
-                    li.active 자주묻는질문과답
-                  h4.page-title 자주묻는질문과답
+                      a(href='/oftenqna/') SD 기본정보
+                    li.active 자주묻는 질문과답
+                  h4.page-title 자주묻는 질문과답
             .row
               .col-lg-12
                 .card-box
