--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -57,7 +57,7 @@ html
                 form.form-horizontal.m-t-20(action='/index' method='post' name='login')
                     fieldset
                         -if(message == null){
-                            h2 로그인하세요.
+                            //h2 로그인하세요.
                         -}else{
                             h3 !{message}
                         -}
