--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -128,13 +128,12 @@ block content
                     table.table.table-bordered
                       thead
                         tr
-                          th(width='16%') 상위업무명
-                          th(width='16%') 하위업무명
-                          th 제목
-                          th(width='15%') 등록일
-                          th(width='15%') 담당자
+                          th(width='16%' class='text-center') 상위업무명
+                          th(width='16%' class='text-center') 하위업무명
+                          th(class='text-center')제목
+                          th(width='15%' class='text-center') 등록일
+                          th(width='15%' class='text-center') 담당자
                       tbody(id='more_list')
-                    #more_view.row
             
             
                   .row
