--- a/app/views/search/user_detail.jade
+++ b/app/views/search/user_detail.jade
@@ -4,7 +4,6 @@ block head
     //link(href='/isu/css/board_style.css', rel='stylesheet')
 
     script(src='/isu/js/search/user_detail.js', type='text/javascript')
-    script(src='/isu/js/search/user_list.js', type='text/javascript')
        
 block content
     .content-page
@@ -31,7 +30,7 @@ block content
                                     button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList();')
                                         i.fa.fa-bars
                                         |  목록
-                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
+                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='window.print();')
                                         i.fa.fa-print
                                         |  인쇄
                                 //.pull-right
