--- a/app/views/oftenqna/edit.jade
+++ b/app/views/oftenqna/edit.jade
@@ -5,6 +5,8 @@ block head
     script(src='/plugins/summernote/dist/summernote.min.js')
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
     script(src='/isu/js/oftenqna/edit.js', type='text/javascript')
+    script(type='text/javascript').
+        var oftenqnaObj = !{JSON.stringify(oftenqna).replace(/<\//g, '<\\/')};    
 
 block content
     .content-page
@@ -43,13 +45,13 @@ block content
                             .p-20
                                 form.form-horizontal.group-border-dashed(id='form' name='form' action='/oftenqna/edit/#{oftenqna._id}' method='post' enctype="multipart/form-data")  
                                     .form-group(style='display:none')
-                                        label.col-sm-3.control-label 상위업무코드
-                                        .col-sm-3
+                                        label.col-sm-2.control-label 상위업무코드
+                                        .col-sm-4
                                             input.form-control(id='higher_nm', name='oftenqna[higher_nm]', type='text', placeholder='', value='#{oftenqna.higher_cd}')
                                     .form-group
                                         label.col-sm-2.control-label 상위업무
                                         .col-sm-4
-                                            select#higher_cd.form-control(name='oftenqna[higher_cd]', onchange='higherCd()', value='#{oftenqna.higher_nm}')
+                                            select#higher_cd.form-control.input-sm(name='oftenqna[higher_cd]', onchange='higherCd()')
                                                 option(value ='') 선택하세요
                                                 - if (higher.length > 0) {
                                                     - for( var i = 0 ; length = higher.length > i ; i++ ){ //속도가 느리다고 알고 있음.
@@ -59,7 +61,7 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 제목
                                         .col-sm-10
-                                            input.form-control(name='oftenqna[title]', type='text', style="ime-mode:active", required, value='#{oftenqna.title}')
+                                            input.form-control(name='oftenqna[title]', type='text', value='#{oftenqna.title}')
                                     .form-group
                                         .col-sm-12
                                             textarea#summernote.summernote
@@ -73,13 +75,13 @@ block content
                                                     | 개
                                                 // start : text 형식 첨부파일 영역
                                                 - if (oftenqna.attach_file.length > 0) {
-                                                - for( var i = 0 ; oftenqna.attach_file.length > i ; i++ ){
-                                                p.m-b-5.font-13
-                                                    i.ti-save.text-primary.m-r-10
-                                                    | #{oftenqna.attach_file[i].originalname}
-                                                    span.text-muted.m-l-10 (#{oftenqna.attach_file[i].size} Byte)
-                                                    a.m-l-10(href='/oftenqna/download/#{oftenqna.attach_file[i].path}') 저장
-                                                - }
+                                                    - for( var i = 0 ; oftenqna.attach_file.length > i ; i++ ){
+                                                        p.m-b-5.font-13
+                                                            i.ti-save.text-primary.m-r-10
+                                                            | #{oftenqna.attach_file[i].originalname}
+                                                            span.text-muted.m-l-10 (#{oftenqna.attach_file[i].size} Byte)
+                                                            a.m-l-10(href='/oftenqna/download/#{oftenqna.attach_file[i].path}') 저장
+                                                    - }
                                                 - }
 block footer
 
