--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -56,7 +56,6 @@ block head
 
     script(src='/isu/js/search/user_list.js', type='text/javascript')
 
-
     script.
         
         var totalData = 1000;    // 총 데이터 수    ------------------>dataObj.length 가져오기 
@@ -146,7 +145,7 @@ block content
             .row
               .col-lg-12
                 .card-box
-                  form.form-horizontal.group-border-dashed(action='#')
+                  form.form-horizontal.group-border-dashed(action='#', onsubmit='return false;')
                     .form-group
                       label.col-sm-2.control-label 상위업무 
                       .col-sm-3
