--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -56,7 +56,7 @@ block head
 
     script(src='/isu/js/search/user_list.js', type='text/javascript')
 
-    //script.
+    script.
         
         var totalData = 1000;    // 총 데이터 수    ------------------>dataObj.length 가져오기 
         var dataPerPage = 15;    // 한 페이지에 나타낼 데이터 수
@@ -116,12 +116,11 @@ block head
             });
                                             
         }
-        
+     
         $("document").ready(function(){        
             paging(totalData, dataPerPage, pageCount, 1);
         });
-  
-
+        
 block content
       // ==============================================================
       // Start right Content here
