#KSY 정렬방식 수정 중

--- a/app/views/oftenqna/index.jade
+++ b/app/views/oftenqna/index.jade
@@ -38,10 +38,10 @@ block content
                       label.col-sm-2.control-label 정렬방식
                       .col-sm-2
                         select.form-control(id='order_by' name='order_by')
-                          option(value ='상위업무명') 상위업무명
-                          option(value ='제목') 제목
-                          option(value ='최근등록일') 최근등록일
-                          option(value ='조회수') 조회수
+                          option(value ='higher_nm') 상위업무명
+                          option(value ='title') 제목
+                          option(value ='created_at') 최근등록일
+                          option(value ='reading_cnt') 조회수
                     .form-group.m-b-0
                       label.col-sm-2.control-label 검색어
                       .col-sm-2
