--- a/app/views/search/user_detail.jade
+++ b/app/views/search/user_detail.jade
@@ -4,7 +4,7 @@ block head
     //link(href='/isu/css/board_style.css', rel='stylesheet')
 
     script(src='/isu/js/search/user_detail.js', type='text/javascript')
-       
+    script(src='/isu/js/search/user_list.js', type='text/javascript')   
 block content
     .content-page
         // Start content
@@ -27,7 +27,7 @@ block content
                         .col-lg-12
                             .btn-toolbar.m-t-10(role='toolbar')
                                 .pull-left
-                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList();')
+                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList(selectedPage);')
                                         i.fa.fa-bars
                                         |  목록
                                     button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='window.print();')
