#KSY 조회수 증가 추가

--- a/app/views/oftenqna/index.jade
+++ b/app/views/oftenqna/index.jade
@@ -64,11 +64,11 @@ block content
                   table.table.table-bordered
                     thead
                       tr
-                        th(width='20%') 상위업무명
-                        th(width='40%') 제목
-                        th(width='10%') 등록자
-                        th(width='20%') 등록일
-                        th(width='10%') 조회수
+                        th.text-center(width='20%') 상위업무명
+                        th.text-center(width='40%') 제목
+                        th.text-center(width='10%') 등록자
+                        th.text-center(width='20%') 등록일
+                        th.text-center(width='10%') 조회수
                     tbody(id='more_list')
 
 block footer
