--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -49,16 +49,11 @@ block head
     // form summernote
     script(src='/plugins/summernote/dist/summernote.min.js')
 
-
     //첨부파일
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
     script(src='/isu/js/incident/new.js', type='text/javascript')
 
     script(src='/isu/js/search/user_list.js', type='text/javascript')
-    script.
-        $("document").ready(function(){        
-            paging(totalData, dataPerPage, pageCount, 1);
-        });
         
 block content
       // ==============================================================
@@ -144,7 +139,8 @@ block content
                     .col-sm-8
                       .dataTables_paginate.paging_simple_numbers.pull-right
                         ul.pagination
-                          #paging
+                          li#paging
+                          
                           
                   // end pagination
             // end Grid Area
