--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -131,17 +131,16 @@ block content
                           th(class='text-center' width='15%') 등록일
                           th(class='text-center' width='15%') 담당자
                       tbody(id='more_list')
-            
-            
                   .row
                     .col-sm-4
-                      .dataTables_info Showing 1 to 10 of 57 entries
+                      .dataTables_info Showing 1 to 15 of 57 entries
                     .col-sm-8
                       .dataTables_paginate.paging_simple_numbers.pull-right
-                        ul.pagination
-                          li#paging
+                        ul#paging.pagination
                           
-                          
+
+
+
                   // end pagination
             // end Grid Area
           // end container
